--- a/website/src/components/Store/styles.css
+++ b/website/src/components/Store/styles.css
@@ -1,10 +1,14 @@
 .store {
+  &-title {
+    @apply text-center;
+  }
+
   &-description {
     @apply text-center;
   }
 
   &-searcher {
-    @apply max-w-2xl mx-auto;
+    @apply max-w-2xl mx-auto my-4;
   }
 
   &-loading {
