:sparkles: add toolbar to store

--- a/website/src/components/Store/styles.css
+++ b/website/src/components/Store/styles.css
@@ -11,6 +11,19 @@
     @apply max-w-2xl mx-auto my-4;
   }
 
+  &-toolbar {
+    @apply flex items-center justify-center my-4;
+
+    &-filters {
+      @apply flex grow gap-2;
+    }
+
+    &-dropdown {
+      @apply rounded-md bg-base-100 shadow-lg border border-base-200;
+      @apply w-36 z-10 m-0 p-2 left-1/2 -translate-x-1/2;
+    }
+  }
+
   &-loading {
     @apply text-primary;
 
@@ -20,6 +33,6 @@
   }
 
   &-container {
-    @apply grid grid-cols-[repeat(auto-fill,minmax(300px,1fr))] gap-6 my-8;
+    @apply grid grid-cols-[repeat(auto-fill,minmax(300px,1fr))] gap-6 mt-4 mb-8;
   }
 }
