:memo: fix format

--- a/website/src/components/Form/styles.css
+++ b/website/src/components/Form/styles.css
@@ -1,5 +1,5 @@
 .form-btn {
-  @apply btn btn-sm btn-primary no-animation
+  @apply btn btn-sm btn-primary no-animation;
 
   &-prev {
     @apply mr-auto;
