--- a/website/src/components/Form/Items/Tag/styles.css
+++ b/website/src/components/Form/Items/Tag/styles.css
@@ -1,5 +1,5 @@
 .add-btn {
-  @apply px-2 select-none cursor-pointer min-w-[64px] rounded-full text-hero hover:bg-hero hover:bg-opacity-[.08]
+  @apply px-2 select-none cursor-pointer min-w-[64px] rounded-full text-hero hover:bg-hero hover:bg-opacity-[.08];
   @apply flex justify-center items-center border-dashed border-2 border-primary-600;
 
   &-disabled {
