--- a/website/src/components/Form/Items/Tag/styles.css
+++ b/website/src/components/Form/Items/Tag/styles.css
@@ -1,14 +1,10 @@
 .add-btn {
-  @apply px-2 select-none cursor-pointer min-w-[64px] rounded-full text-hero hover:bg-hero hover:bg-opacity-[.08];
-  @apply flex justify-center items-center border-dashed border-2 border-primary-600;
+  @apply px-2 select-none cursor-pointer min-w-[64px] rounded-full hover:bg-opacity-[.08];
+  @apply flex justify-center items-center border-dashed border-2;
 
   &-disabled {
     @apply pointer-events-none opacity-60;
   }
-}
-
-.form-item-container {
-  @apply flex items-center mt-2;
 }
 
 .form-item {
@@ -24,5 +20,9 @@
 
   &-select {
     @apply select select-sm select-bordered;
+  }
+
+  &-container {
+    @apply flex items-center mt-2;
   }
 }
