--- a/website/src/components/Tag/styles.css
+++ b/website/src/components/Tag/styles.css
@@ -1,3 +1,3 @@
 .tag {
-  @apply font-mono inline-flex px-3 rounded-full items-center align-middle mr-2;
+  @apply font-mono inline-flex px-3 rounded-full items-center align-middle;
 }
