:memo: greater width on desktop devices

--- a/website/src/components/Modal/styles.css
+++ b/website/src/components/Modal/styles.css
@@ -8,7 +8,7 @@
   }
 
   &-container {
-    @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 min-w-[400px];
+    @apply absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 min-w-[400px] lg:min-w-[600px];
     @apply p-8 opacity-0;
     @apply transition-opacity duration-[225ms] ease-in-out delay-0;
 
