:sparkles: 为详情卡片添加测试结果显示

--- a/website/src/components/Resource/Card/styles.css
+++ b/website/src/components/Resource/Card/styles.css
@@ -14,7 +14,7 @@
     }
 
     &-check {
-      @apply ml-2 text-success fill-current;
+      @apply ml-2 text-success/90 fill-current;
     }
 
     &-expand {
