--- a/website/src/components/Resource/DetailCard/styles.css
+++ b/website/src/components/Resource/DetailCard/styles.css
@@ -1,6 +1,10 @@
 .detail-card {
   &-header {
     @apply flex items-center align-middle;
+
+    &-divider {
+      @apply m-0;
+    }
   }
 
   &-avatar {
@@ -19,15 +23,19 @@
     }
   }
 
-  &-copy-button {
-    @apply ml-auto btn btn-sm;
+  &-actions {
+    @apply flex items-center gap-x-2 ml-auto;
 
-    &-mobile {
-      @apply lg:hidden;
-    }
+    &-button {
+      @apply btn btn-sm;
 
-    &-desktop {
-      @apply max-lg:hidden;
+      &-mobile {
+        @apply lg:hidden;
+      }
+
+      &-desktop {
+        @apply max-lg:hidden;
+      }
     }
   }
 
