:memo: ellipsis & tooltip for long plugin name and tweak icon margins

--- a/website/src/components/Resource/Card/styles.css
+++ b/website/src/components/Resource/Card/styles.css
@@ -7,10 +7,14 @@
   }
 
   &-header {
-    @apply flex items-center w-full text-lg font-medium;
+    @apply flex items-center w-full text-lg font-medium tooltip;
 
     &-title {
-      @apply grow justify-start truncate flex items-center;
+      @apply truncate grow justify-start flex items-center;
+    }
+
+    &-text {
+      @apply truncate flex-initial cursor-help;
     }
 
     &-check {
