:memo: Docs: 添加 uwu logo (#2689)

--- a/website/src/components/Home/styles.css
+++ b/website/src/components/Home/styles.css
@@ -39,3 +39,16 @@
     @apply inline-block !max-w-[600px];
   }
 }
+
+.home-hero-uwu {
+  @apply hidden;
+}
+
+[data-uwu=true] .home-hero-uwu {
+  @apply block max-w-xs;
+}
+
+[data-uwu=true] .home-hero-logo,
+[data-uwu=true] .home-hero-title {
+  @apply hidden;
+}
