:memo: :bug: responsive design

--- a/website/src/components/Store/styles.css
+++ b/website/src/components/Store/styles.css
@@ -14,6 +14,10 @@
   &-toolbar {
     @apply flex items-center justify-center my-4;
 
+    &-sorter{
+      @apply flex-1;
+    }
+
     &-filters {
       @apply flex grow gap-2;
     }
