:memo: :lipstick: move sorter to the left on desktop

--- a/website/src/components/Store/styles.css
+++ b/website/src/components/Store/styles.css
@@ -20,6 +20,10 @@
 
     &-sorter {
       @apply max-lg:flex-1;
+
+      &-desktop {
+        @apply max-lg:hidden;
+      }
     }
 
     &-filters {
