:memo: Docs: 商店插件可用性筛选 & 更新排序 (#3334)

--- a/website/src/components/Store/styles.css
+++ b/website/src/components/Store/styles.css
@@ -14,6 +14,18 @@
   &-toolbar {
     @apply flex items-center justify-center my-4;
 
+    &-second {
+      @apply lg:hidden;
+    }
+
+    &-sorter {
+      @apply max-lg:flex-1;
+
+      &-desktop {
+        @apply max-lg:hidden;
+      }
+    }
+
     &-filters {
       @apply flex grow gap-2;
     }
